app.css
/* Color Scheme */
:root {
    --background-color: #141414;
    --default-text-color: #a0a0a0;
    --emphasis-text-color: #d5d5d5;
    --underline-color: #545454;
}

/* Body & Container */
:root {
    --section-spacing: 150px;
    --font-size: 20px;
}
@media (max-width: 869px) {
    :root {
        --section-spacing: 64px;
        --font-size: 17px;
    }
}
body {
    font-family: Arial, sans-serif;
    font-weight: 300;
    font-size: var(--font-size);
    line-height: 1.5em;
    margin: 0;
    background-color: var(--background-color);
    color: var(--default-text-color);
}
.container {
    padding: var(--section-spacing) 15px 0;
    max-width: 60%;
    margin: 0 auto;
}
@media only screen and (max-width: 1069px) {
    .container {
        max-width: 95%;
    }
}
@media only screen and (min-width: 1070px) {
    .container {
        max-width: 70%;
    }
}

/* Header */
a {
    color: inherit;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
    text-decoration-style: solid;
    text-underline-position: under;
    text-underline-offset: 0.5px;
    text-decoration-thickness: 1px;
    text-decoration-color: var(--underline-color);
}

ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

header,
section {
    margin-bottom: var(--section-spacing);
}

header {
    display: flex;
    align-items: center;
}
@media (max-width: 869px) {
    header {
        flex-direction: column-reverse;
    }
    .headerColumn {
        text-align: center;
    }
}

.avatarAndNameContainer {
    flex-shrink: 0;
    display: flex;
    align-items: center;
}
@media (max-width: 869px) {
    .avatarAndNameContainer {
        flex-direction: column;
    }
}

.avatarContainer {
    width: 90px;
    height: 90px;
    margin-right: 20px;
    position: relative;
    clip-path: circle();
}
@media (max-width: 869px) {
    .avatarContainer {
        margin-bottom: 10px;
    }
}

.avatarImage {
    position: absolute;
    bottom: 0;
    width: 90px;
    height: 90px;
}

h1 {
    font-size: 24px;
    font-weight: 500;
    margin: 0;
    color: var(--emphasis-text-color);
}
@media (max-width: 869px) {
    h1 {
        font-size: 20px;
    }
}

.headerColumn {
    margin-left: 5em;
    align-items: start;
}

.svg {
    text-align: right;
    height: 25px;
    width: auto;
    margin: 0px;
    background-size: contain;
}

nav {
    flex: 1;
    display: flex;
    align-items: center;
    flex-direction: row-reverse;
}
@media (max-width: 869px) {
    nav {
        justify-content: space-evenly;
        width: 100%;
        margin-bottom: 22px;
        margin-right: 6rem;
        flex-wrap: wrap;
    }
}

nav label {
    font-size: 0;
    line-height: 0;
}
nav ul {
    display: flex;
}
@media (max-width: 869px) {
    nav ul {
        width: 100%;
        max-height: 170px;
        overflow: hidden;
    }
}
nav a {
    padding: 0px 16px;
}
@media (max-width: 869px) {
    nav a {
        display: block;
        padding: 6px 0;
    }
}

/* Content */
h2 {
    font-size: 80%;
    font-weight: 500;
    margin-bottom: 25px;
    text-transform: uppercase;
    color: var(--subtle-text-color);
}
@media (max-width: 869px) {
    h2 {
        margin-bottom: 15px;
    }
}

blockquote {
    line-height: 1.56em;
    color: var(--emphasis-text-color);
    font-size: 32px;
    margin: 20px 0 0;
}
@media (max-width: 869px) {
    blockquote {
        font-size: 20px;
        margin: 16px 0 0;
    }
}
@media only screen and (max-width: 1077px) {
    blockquote br {
        display: none;
    }
}

